<resources>
    <string name="app_name">俄罗斯方块</string>
    <string name="score_label">分数</string>
    <string name="next_label">下一个</string>
    <string name="btn_left">◀</string>
    <string name="btn_right">▶</string>
    <string name="btn_rotate">↻</string>
    <string name="btn_down">▼</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_restart">重新开始</string>
    <string name="game_over">游戏结束</string>
</resources>
